# zkm-scan

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  RELAY_LOG.md  REVIEW_ME.md  ROADMAP.md  TODO.md  convert.py  plugin.yaml  pyproject.toml
features/: convert-scan.feature
src/zkm_scan/: convert.py  plugin.yaml
tests/: conftest.py  test_convert.py  test_integration_ocr.py  test_roadmap.py
