[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zkm-scan"
version = "0.1.0"
description = "zkm plugin: OCR images and scanned PDFs into the knowledge store"
requires-python = ">=3.11"
dependencies = [
    "pytesseract>=0.3",
    "pdf2image>=1.17",
    "Pillow>=10.0",
    "python-frontmatter>=1.1",
    "zkm",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zkm_scan"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv.sources]
zkm = { path = "../zkm", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
