[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zkm-scan"
version = "0.2.0"
description = "zkm plugin: OCR images and scanned PDFs into the knowledge store"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Tobias Kienzler", email = "zommuter@googlemail.com"}]
keywords = ["knowledge-management", "markdown", "personal-data", "ocr", "tesseract"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = [
    "pytesseract>=0.3",
    "pdf2image>=1.17",
    "Pillow>=10.0",
    "python-frontmatter>=1.1",
    "zkm>=0.4,<1.0",
]

[project.urls]
Homepage = "https://github.com/zommuter/zkm"
Repository = "https://github.com/zommuter/zkm-scan"
Issues = "https://github.com/zommuter/zkm-scan/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zkm_scan"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv.sources]
zkm = { path = "../..", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
